<resources>
    <string name="app_name" translatable="false">Chat App</string>

    <!--  connection + registration -->
    <string name="password">Password…</string>
    <string name="username">Username…</string>
    <string name="connectButton">Connect</string>
    <string name="registerButton">Register</string>
    <string name="displayName">Display name…</string>
    <string name="select_image">Select image</string>
    <string name="confirmPassword">Confirm password…</string>
    <string name="register_link">Not registered? Click here</string>
    <string name="AlreadyRegistered">Already registered? Click here</string>

    <!--  settings -->
    <string name="Save">Save</string>
    <string name="dayMode">Day</string>
    <string name="Hebrew">Hebrew</string>
    <string name="English">English</string>
    <string name="nightMode">Night</string>
    <string name="Settings">Settings</string>
    <string name="Theme">Change Theme</string>
    <string name="switchServer">Switch server</string>
    <string name="theme_light" translatable="false">Light</string>
    <string name="theme_dark" translatable="false">Dark</string>
    <string name="theme_default" translatable="false">System Default</string>


    <!--  chat screen -->
    <string name="UsernameHeading">Username</string>
    <string name="MessageBox">Type your message…</string>
    <string name="Send">Send</string>
    <string name="SenderMessage" translatable="false">Message content SenderMessage</string>
    <string name="ReceiverMessage" translatable="false">Message content ReceiverMessage</string>

    <!--  contacts screen -->
    <string name="contact">contact</string>
    <string name="tempName">u</string>
    <string name="hour" translatable="false">00:00</string>
    <string name="BaseUrl" translatable="false">http://10.0.2.2:12345/api/</string>
    <string name="choose_theme">choose theme</string>

</resources>