<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background" />

    <LinearLayout
        android:id="@+id/centerContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blueInput"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="11dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blueInput"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="11dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/editTextTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blueInput"
            android:ems="10"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:padding="11dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/editTextDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blueInput"
            android:ems="10"
            android:hint="@string/displayName"
            android:inputType="textPersonName"
            android:padding="11dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/selectImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image"
            android:layout_gravity="center"
            app:backgroundTint="@color/blueInput"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerButton"
            android:layout_gravity="center"
            android:textColor="@color/white"
            app:backgroundTint="@color/buttonToNextPage"
            android:layout_marginBottom="40dp"/>

        <TextView
            android:id="@+id/connection_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/AlreadyRegistered"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:autoLink="web"
            android:linksClickable="true" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
