<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueInput"
    tools:context=".ChatScreen">

    <!-- Profile Section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="64dp"
            android:layout_height="63dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/person_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/UsernameHeading"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/buttonDelete"
            android:layout_width="57dp"
            android:layout_height="81dp"
            android:layout_marginEnd="9dp"
            android:background="@android:color/transparent"
            android:importantForAccessibility="no"
            android:src="@drawable/delete_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollViewMessages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/layoutMessageInput"
        android:layout_below="@id/profileSection"
        android:background="@drawable/background"
        app:layout_constraintBottom_toTopOf="@id/layoutMessageInput"
        app:layout_constraintTop_toBottomOf="@id/profileSection">

        <LinearLayout
            android:id="@+id/layoutMessageList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/message_sender" />

            <include layout="@layout/message_receiver" />

            <include layout="@layout/message_sender" />

            <include layout="@layout/message_receiver" />

            <include layout="@layout/message_sender" />

        </LinearLayout>
    </ScrollView>

    <!-- Message Input -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutMessageInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/editMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/MessageBox"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonSend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.90" />

        <ImageButton
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/send_icon"
            android:text="@string/Send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.15" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

